--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -289,7 +289,7 @@
     
     <!-- Level Drop Target -->
     <div id="level-{{level}}" class="lvl-target dropHorizontal dropWidth" 
-    	x-lvl-drop-target="true" x-on-drop="droppedLevel(dragEl, dropEl)">Level</div>
+    	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">Level</div>
 
     <!-- Every node is a Drag Source --> 
     <div id="{{node.node_id}}-{{node.type}}-{{node.level}}-{{node.position}}" ng-repeat="node in nodes"
@@ -348,7 +348,7 @@
             
         	<!-- Left Position Drop Target -->
             <div id="levelPosition-{{level}}-{{node.position}}" class="lvl-target leftActDrop"
-            	x-lvl-drop-target="true" x-on-drop="droppedPosition(dragEl, dropEl)">left-pos</div>
+            	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">left-pos</div>
             
             <a class="whiteText" ng-click="open(node)">
                 <h6 class="actNameEdit noClear">{{ node.node_name }}</h6>
@@ -380,14 +380,14 @@
     
     <!-- Right Position Drop Target Plus One -->
     <div id="maxPosition-{{level}}" class="lvl-target rightActDrop" 
-    	x-lvl-drop-target="true" x-on-drop="droppedMaxPosition(dragEl, dropEl)">rgt-pos</div>
+    	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">rgt-pos</div>
     <!-- End Activity or Group Box -->
 
 </div>
 
 <!-- Level Drop Target Plus One -->
 <div id="maxLevel" class="lvl-target dropHorizontal dropWidth" 
-	x-lvl-drop-target="true" x-on-drop="droppedMaxLevel(dragEl, dropEl)">Max Level+1</div>
+	x-lvl-drop-target="true" x-on-drop="dropped(dragEl, dropEl)">Max Level+1</div>
 
 <div id="activityErrors" ng-show="alertMsg" class="alert alert-warning">
     {{ alertMsg }}
