--- a/client/views/partials/ld.html
+++ b/client/views/partials/ld.html
@@ -79,6 +79,11 @@
                 <h5 class="btnModel">USE THIS DESIGN AS A MODEL</h5>
             </a>
         </div>
+        <div ng-hide="{{learningDesign.user_id}} != 1">
+            <a ng-href="/ldedit/{{learningDesign.ld_id}}">
+                <h4 class="editingMode">Edit this design</h4>
+            </a>
+        </div>
         <!--Sidebar content-->
     </div>
 </div>
