--- a/client/views/partials/ldedit.html
+++ b/client/views/partials/ldedit.html
@@ -172,13 +172,18 @@
                     <div class="onoffswitch-switch"></div>
                 </label>
             </div>
-
             <div class="clearfix"></div>
         </div>
 
+        <div  >
+            <a ng-href="/ld/{{learningDesign.ld_id}}">
+                <h4 class="editingMode">Finish edit</h4>
+            </a>
+        </div>
         <!--Sidebar content-->
 
     </div>
+
 </div>
 
 
