--- a/client/views/index.html
+++ b/client/views/index.html
@@ -26,7 +26,7 @@
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
                 <span class="icon-white icon-user"></span>
             </button>
-            <a class="brand" href="#" name="top"><img src="../img/logo.png" alt="Ledita Logo"/></a>
+            <a class="brand" href="#" name="top"><img src="../img/logo-beta.png" alt="Ledita Logo"/></a>
 
             <div class="nav-collapse collapse">
 
@@ -56,7 +56,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a id="homeLink" class="brand" href="/"><img src="../img/logo.png" alt="Ledita Logo"/></a>
+            <a id="homeLink" class="brand" href="/"><img src="../img/logo-beta.png" alt="Ledita Logo"/></a>
 
             <div ng-controller="NavActionCtrl" class="nav-collapse collapse">
                 <ul class="nav-top-pad nav">
