--- a/client/css/app.css
+++ b/client/css/app.css
@@ -553,6 +553,26 @@ margin-left: 4%;
     border-radius: 4px;
     margin: 0 0 2px 28% ;
 }
+.errorBoxSidebar {
+    height: 14px;
+    width: 100%;
+    margin: -20px 0 7px 0;
+}
+
+.errorTipSidebar {
+    color: #FFFFFF;
+    font-size: 10px;
+    background-color: #990000;
+    opacity: 0.8;
+    padding: 2px;
+    border-radius: 4px;
+    margin: 0 0 2px 0;
+
+}
+
+.hand {
+    cursor: pointer;
+}
 /* new LD creation
  ==================== */
 .sidebarForm {
@@ -563,15 +583,16 @@ margin-left: 4%;
 .editButton  {
 background: #0099CC;
     border-radius: 12px;
-    height: 20px;
-    width: 20px;
-    line-height: 20px;
+    height: 16px;
+    width: 16px;
+    line-height: 17px;
     margin: 0;
     text-align: center;
     padding: 0;
     border: none;
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
     display: inline-block;
+    cursor: pointer;
 }
 
 
