--- a/client/views/index.html
+++ b/client/views/index.html
@@ -13,6 +13,7 @@
     <link href="/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="/css/bootstrap.icon-large.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
+    <link href="/css/normalize.css" rel="stylesheet">
 
 </head>
 
