--- a/client/views/index.html
+++ b/client/views/index.html
@@ -87,8 +87,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <!-- FIXME: add dynamic links -->
-                            <li><a href="/user/"><i class="icon-cog"></i> My Profile</a></li>
-                            <li><a href="/lds/"><i class="icon-pencil"></i> My Designs</a></li>
+                            <li><a href="/useredit/1"><i class="icon-cog"></i> My Profile</a></li>
+                            <li><a href="/userlds/1"><i class="icon-pencil"></i> My Designs</a></li>
                             <li class="divider"></li>
                             <li><a id="logoutLink" ng-click="logout()" href=""><i class="icon-off"></i> Logout</a></li>
                         </ul>
